# haoyun.github.io

./: .gitignore  .gitmodules  CNAME  Hakyll-Foundation.cabal  README.md  index.html  site.cabal  site.hs
Foundation/: gulpfile.js  package-lock.json  package.json
Foundation/scss/: NotoSansSC-Lighter.css  _blog_settings.scss  _blog_snippet.scss  _fake-recaptcha.scss  _hover-animation.scss  _settings.scss  _settings_override.scss  _snippet.scss  _solarized.scss  app.scss  back-to-top-rocket.scss  blog_app.scss  blog_main.scss  blog_snippet.scss  fake-recaptcha.scss  hover-animation.scss  main.scss  snippet.scss
comment/: index.html
css/: blog_main.css  default.css  main.css
files/: Yun_Hao.asc
files/bespoke-test/: gulpfile.js  package-lock.json
files/bespoke-test/src/: index.md  index.txt  pandoc-bespoke.html
files/src/: CV-20190728.tex  CV-20191029.tex
js/: app.js
n/: index.html
n/about/: index.html
n/archive/: index.html
n/contact/: index.html
posts/: 2017-08-23-readme.markdown  2017-08-28-understand-hakyll.markdown
s/: index.html
s/links/: index.html
s/notes/: index.html
s/tools/: index.html
src/: Compiler.hs  Configuration.hs  Context.hs  ExtensionlessUrl.hs  LaTeXtoImage.hs  Routes.hs  Rules.hs  deploy.sh  site.hs
src_site/: comment.markdown  index.html  index.markdown
src_site/css/: .gitignore  blog_main.css  default.css  main.css
src_site/css_dev/: gulpfile.js  package-lock.json  package.json
src_site/css_dev/sass/: default.scss
src_site/files/: Yun_Hao.asc  Yun_Hao.pem
src_site/files/bespoke-test/: .gitignore  package.json
src_site/files/src/: CV-20171116.tex  CV-20180126.tex  CV-20190728.tex  CV-20191029.tex
src_site/js/: app.js
src_site/n/: about.markdown  about.rst  contact.markdown  index.html
src_site/n/posts/: 2016-12-13-无题.markdown  2016-12-13-琐碎.markdown  2016-12-19-废纸.markdown  2016-12-19-整理废纸.markdown  2016-12-21-不懂政治.markdown  2016-12-21-无题.markdown  2016-12-24-我为什么选择了算数几何.markdown  2016-12-24-无题.markdown  2017-01-04-护照.markdown  2017-01-22-无题.markdown  2017-01-22-难过.markdown  2017-03-15-BT下载的正确姿势.markdown  2017-03-20-Remote-Access-to-the-University-Network-FU.markdown  2017-03-20-Remote-Access-to-the-University-Network-TU.markdown  2017-08-23-readme.markdown  (+15 more)
src_site/posts/: 2017-08-23-readme.markdown
src_site/s/: index.markdown  links.markdown  notes.markdown  tools.markdown
src_site/templates/: archive.html  comment.html  default.html  finalize.html  footer.html  languages-switcher.html  post-container.html  post-list.html  post-teaser.html  post-title-body.html  post-title_info-body-teaser.html  post-title_info-body.html  post-with-hero.html  post.html  textfile.html
templates/: default.html  post-list-content.html
(+24 files in other folders)
