name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base                 == 4.*
                  , hakyll               == 4.12.*
                  , pandoc               >= 2.0.5
                  --&& <2.3
                  , filepath             >= 1.0   && < 1.5
                  , blaze-html           >= 0.5   && < 0.10
                  , process              >= 1.6   && < 1.7
                  , optparse-applicative >= 0.12  && < 0.15
                  , JuicyPixels          >= 3.2 && < 3.4
                  , directory            >= 1.2 && < 1.4
                  , errors >= 2.0 && < 2.4
                  , temporary >= 1.2 && < 1.4
                  , transformers >= 0.3 && < 0.6
--                  , latex-formulae-image == 0.1.1.*
--                  , latex-formulae-pandoc >= 0.2.0.1 && < 0.3
--                  , latex-formulae-hakyll == 0.2.0.4
                  , lrucache >= 1.2 && <1.3
  ghc-options:      -threaded
  default-language: Haskell2010
  Other-Modules:    Context
                  , Routes
                  , Configuration
                  , Compiler
 --                 , LaTeXtoImage
