name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base                 == 4.*
                  , hakyll               == 4.13.*
                  , pandoc               >= 2.0.5
                  , filepath             >= 1.0   && < 1.5
                  , process              >= 1.6   && < 1.7
                  , directory            >= 1.2 && < 1.4
  ghc-options:      -threaded
  default-language: Haskell2010
  Other-Modules:    Compiler
                  , Configuration
                  , Context
                  , Routes
                  , Rules
